add fencing feature