@@ -1,24 +1,30 @@
 package com.backend.geosentinel.security;
 
 
+
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
 public class CorsConfig {
+
+    @Value("${cors.allowed-origins}")
+    private String[] allowedOrigins;
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
 
         CorsConfiguration configuration = new CorsConfiguration();
 
-        configuration.setAllowedOrigins(
-                List.of("http://localhost:5173")
+        configuration.setAllowedOriginPatterns(
+                Arrays.asList(allowedOrigins)
         );
 
         configuration.setAllowedMethods(
@@ -28,6 +34,7 @@ public class CorsConfig {
         configuration.setAllowedHeaders(
                 List.of("*")
         );
+
 
         configuration.setAllowCredentials(true);
 
